Corrected truncation fade class in the timeline releases

--- a/app/assets/stylesheets/timeline.css.scss
+++ b/app/assets/stylesheets/timeline.css.scss
@@ -35,7 +35,7 @@
       position:relative;
       margin-bottom: 1px;
         a {
-          @extend .fadeTo;
+          @extend .fadeTo_white;
             &:first-child {
               color: $orange;
             }
